--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <li id="io4" class="list">
             <a href="login.html" target:"_blank">
               <span class="icon" id="j4">
-                <ion-icon name="person-add-outline"></ion-icon>
+                <ion-icon class="whitekr1" name="person-add-outline"></ion-icon>
               </span>
-              <span class="text">Login</span>
+              <span class="text" id="whitekr">Login</span>
             </a>
           </li>
           <div class="indicator"></div>
